--- a/_posts/2024-12-23 first.md
+++ b/_posts/2024-12-23 first.md
@@ -1,6 +1,14 @@
+---
+
+layout: single
+title: "사전캠프 1일차 TIL"
+
+---
+
 1. 내일배움캠프 Unity 트랙에 참여한 계기는 무엇인가요?
    - 게임개발에 관심이 있고 팀프로젝트 경험을 쌓고 싶어서
 2. 본 코스 수료 후, 어떤 게임 개발자로 성장하고 싶나요?
    - 장르를 넘어 다양한 인디게임을 개발하는 개발자가 되고 싶습니다
 3. **그 외에 Untiy 트랙에 기대하는 것이 있다면 자유롭게 작성해 주세요.**
    - 다양한 경험을 얻어가고 싶습니다.
+
