--- a/_posts/2024-12-26-first.md
+++ b/_posts/2024-12-26-first.md
@@ -3,6 +3,14 @@ layout: single
 title: "Unity 살펴보기"
 ---
 
-1유니티 에셋 스토어에 대해 살펴보았다.![스크린샷 2024-12-26 142217](images/2024-12-26-first/스크린샷 2024-12-26 142217.png)
+1유니티 에셋 스토어에 대해 살펴보았다.
 
-기간제 할인코드를 통해 무료로 구입했고 다양한 게임의 펀치 사운드를 낼 수 있는 에셋이라 유용하게 쓰일 것 같다.
+![test](../images/2024-12-26-first/test.png)
+
+Punch Sound Pack라는 에셋이 마침 할인을 하고 있었고
+
+
+
+기간제 할인코드를 통해 무료로 구입했다.
+
+ 다양한 게임의 펀치 사운드를 낼 수 있는 에셋이라 유용하게 쓰일 것 같다.
