--- a/_posts/2025-01-31-datatype1.md
+++ b/_posts/2025-01-31-datatype1.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 comments: true
-title: "자료형 변환 "
+title: "스네이크 게임 분석 "
 categories: TIL
 ---
 
@@ -13,36 +13,108 @@ categories: TIL
 
 ---
 
-## 자료형 변환
+## 스네이크 게임
 
-정수 `num1`과 `num2`가 매개변수로 주어질 때, `num1`을 `num2`로 나눈 값에 1,000을 곱한 후 정수 부분을 return 하도록 soltuion 함수를 완성할것
+부트캠프의 개인 과제로 스네이크 게임을 만들게 되었다.
+
+만들기에 앞서 코드의 전체적인 구조를 분석해 보기로 했다. 게임 구조를 잘 모르기 때문
+
+게임을 만드는데 있어 기본적인 틀을 제공해 주었고
 
 
 
-입출력 예 #1
+이를 통해 필요한 로직을 정리해야 했다.
 
-- `num1`이 3, `num2`가 2이므로 3 / 2 = 1.5에 1,000을 곱하면 1500
 
-입출력 예 #2
 
-- `num1`이 7, `num2`가 3이므로 7 / 3 = 2.33333...에 1,000을 곱하면 2333.3333.... 이 되며, 정수 부분은 2333
+## 
 
-입출력 예 #3
+이 게임은 주로 `Point`, `Snake`, `FoodCreator` 클래스로 구성되어 있습니다. 각 클래스가 담당하는 역할을 간단하게 설명해드릴게요.
 
-- `num1`이 1, `num2`가 16이므로 1 / 16 = 0.0625에 1,000을 곱하면 62.5가 되며, 정수 부분은 62
+### 1. **Point 클래스**
 
-```
-using System;
+- **역할**: 게임에서 뱀이나 음식 등 모든 "점"을 표현한다.
 
-public class Solution {
-    public float solution(float num1, float num2) {
-        float answer = 0;
-        answer = (int)((float)num1 / num2 * 1000);
-        return answer;
-    }
-}
-```
+- 속성
 
-**`int`로 반환**: 반환값이 정수여야 하므로 `int` 타입으로 변경
+  :
 
-**정수 캐스팅**: `(float)num1 / num2`로 명시적 캐스팅을 추가하여 소수 계산을 수행한 뒤, `int`로 캐스팅하여 정수 부분만 표시
+  - `x`, `y`: 좌표 (화면 상에서 점이 위치할 곳)
+  - `sym`: 화면에 표시될 기호 (뱀은 `*`, 음식은 `$` 같은 기호로 나타냄)
+
+- 메서드
+
+  :
+
+  - `Draw()`: 점을 현재 화면 위치에 출력
+  - `Clear()`:점을 지움 
+  - `IsHit()`: 다른 점과 위치가 같으면 충돌했다고 판단
+
+### 2. **Snake 클래스**
+
+- **역할**: 뱀의 상태와 이동을 관리
+
+- 속성
+
+  :
+
+  - `body`: 뱀의 몸을 구성하는 `Point` 객체들의 리스트로, 뱀의 각 부분이 저장, 가장 앞의 점이 머리, 나머지 점들이 몸이된다.
+  - `direction`: 뱀이 이동하는 방향 (`LEFT`, `RIGHT`, `UP`, `DOWN` 중 하나)
+
+- 메서드
+
+  :
+
+  - `Move()`: 뱀이 현재 방향으로 한 칸 이동. 새로운 머리 위치를 추가하고, 마지막 꼬리 부분을 지움.
+  - `HandleInput()`: 사용자가 입력한 방향키를 받아 뱀의 이동 방향을 변경.
+  - `HasCollidedWithWall()`: 벽에 충돌했는지 확인. 벽은 게임 영역 밖을 의미.
+  - `HasCollidedWithSelf()`: 뱀의 몸통에 부딪혔는지 확인. 몸통은 뱀의 머리 외의 나머지 부분을 의미.
+  - `Eat()`: 뱀이 음식을 먹으면 길이가 늘어나며, 새로운 몸통이 추가됩니다.
+
+### 3. **FoodCreator 클래스**
+
+- **역할**: 게임 화면 내에서 음식을 무작위로 생성
+
+- 속성
+
+  :
+
+  - `width`, `height`: 게임 화면의 크기
+  - `symbol`: 음식을 나타내는 기호 (보통 `$`)
+
+- 메서드
+
+  :
+
+  - `CreateFood()`: 랜덤한 좌표에 음식을 생성
+
+### **게임 흐름 (Main 함수)**
+
+1. 초기화
+
+   :
+
+   - 뱀의 초기 위치와 방향을 설정하고, 화면에 표시.
+   - 음식을 랜덤 위치에 생성하고, 표시.
+
+2. 게임 루프
+
+   :
+
+   - 계속해서 게임이 진행되며, 게임이 끝날 때까지 반복됩니다.
+   - **키 입력 처리**: 사용자가 방향키를 눌렀을 때 `Snake` 객체가 방향을 변경.
+   - **뱀 이동**: 뱀은 현재 방향으로 이동하고, 몸통은 새로 추가된 머리 위치로 갱신.
+   - **충돌 검사**: 뱀이 벽이나 자기 몸에 부딪혔는지 확인하고, 부딪히면 게임종료.
+   - **음식 먹기**: 뱀이 음식을 먹으면 길이가 늘어나고, 새로운 음식이 생성.
+
+### 핵심요소
+
+- **Point**: 게임의 모든 점을 나타내는 클래스. 뱀, 음식 등 모든 객체의 위치를 정의.
+- **Snake**: 뱀의 움직임, 방향, 충돌 등을 담당. 뱀의 상태를 업데이트하고, 게임의 핵심 동작을 수행.
+- **FoodCreator**: 음식을 랜덤한 위치에 생성하고, 그 위치를 반환.
+- **Main**: 게임의 흐름을 제어하는 메인 루프. 게임 시작, 뱀 이동, 충돌 검사, 음식 먹기 등을 반복하면서 게임을 진행.
+
+
+
+
+
