--- a/_posts/2025-02-04-TextRPG.md
+++ b/_posts/2025-02-04-TextRPG.md
@@ -214,6 +214,17 @@ internal class Inventory
 아이템이 사용되었다면 아이템은 제거된다.
 
 + 예외처리로 장비아이템은 별개로 적용해야 하며, 직업군 마다 착용가능한 장비가 달라야한다.
++ -> 장비 아이템과 소비아이템을 구분처리 하였으며 인벤토리 뿐만 아니라 상점에도 적용되어야 했다.
++ 상점에서 구매한 아이템은 다시 구매 할 수 없도록 하였고 구매즉시 가격이 반영되어야함
++ 예외로 소비아이템은 몇개나 들고 다닐 수 있음으로 개수제한을 하지 않았음에 돈만 있다면 무제한으로 구매가능하다.
+
+그러나 로직상문제로 현재체력이 회복되는 것이 아닌 최대체력만이 증가 하기에 > 게임의 난이도를 높여 하드코어모드로 전환
+
+
+
+플레이어는 체력 물약을 구매 할 수 있으나 초반 자금이 많이들도록 하였고 던전에서 랜덤하게 드롭이 가능하다.
+
+
 
 1. **맵(Map) 및 탐험 시스템**
 
@@ -277,3 +288,6 @@ class Quest
 퀘스트의 제목, 목표, 횟수, 보상, 타겟등을 설정하여 퀘스트 클리어가 되면 보상을 얻게된다.
 
 + 아직 보상 획득 로직과 새로운 퀘스트를 수주하는 로직의 추가가 필요함
++ 상점시스템은 구현되었으나 구매하기만 가능
++ 여관 시스템을 통해 돈을 내고 체력을 전부 회복시켜주는 로직 구현 필요
++ 퀘스트를 수주할 수 있도록 목록과 수락, 실패여부를 구현(시간제한-> 던전의 진입횟수를 카운트로 세어서 제한하기) - 희망 기능
