--- a/_posts/2025-02-18-Interact.md
+++ b/_posts/2025-02-18-Interact.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 comments: true
-title: "상호작용 만들기2 "
+title: "상호작용 만들기 "
 categories: TIL
 ---
 
@@ -13,92 +13,141 @@ categories: TIL
 
 ---
 
+유니티로 제작하는 프로젝트에서 상호작용 기능이 필요하게 되어 기능을 구현해 보려고 한다.
 
+- 플레이어가 상호작용이 가능한 물체의 근처에 갔을경우 
+- 상호작용하는 표시가 뜨도록 한다.
+- 특정 키 입력을 받아 상호 작용 되도록 설계한다.
+- 코드를 실행한다.
 
-#### 1.탈것 구현해보기
-
----
-
-저번에 상호작용을 구현해 보았는데 이번에는 상호작용을 활용하여 탈것을 구현해 보려고 한다.
-
-- 탑승 오브젝트는 플레이어와 마찬가지로 이동할 수있어야함
-- 탑승물마다 스탯보너스가 달라져야함
-- 플레이어가 탑승후 카메라가 탑승 오브젝트를 따라가야함
-- 플레이어의 모습이 보이면 좋음 < 아직구현했음...
-
-
-
-#### 2. 인터페이스 상속
+#### 1. 영역 만들기
 
 ---
+
+플레이어가 상호작용이 가능한 물체와 접근하는 경우 콜라이더를 통해 상호작용이 가능하다는 문구를 출력해야 한다.
+
+
 
 ```
-public class Rideable : MonoBehaviour, IInteractable
+public interface IInteractable
 {
-    [SerializeField] private Transform seatPosition;  
-    [SerializeField] private GameObject interactUI; // ✅ UI 오브젝트 참조 추가
+    void Interact(); // 상호작용 기능
+}
+```
 
-    private GameObject player;
-    private RideableController rideableController; //탑승물 조작
-    private bool isRiding = false;
-    private CinemachineVirtualCamera virtualCamera;
-    private Rigidbody playerRigidbody;
+인터렉터블 인터페이스를 만들어 상호작용이 가능한 모든 물체는 이 인터페이스를 상속 받는다.
+
+```
+void OnDrawGizmosSelected()
+    {
+        Gizmos.color = Color.green;
+        Gizmos.DrawWireSphere(transform.position, interactionRange);
+    }
+```
+
+기즈모를 사용해서 플레이어가 접근 할 수 있는 범위를 표시해준다.
+
+#### 2. UI 만들기
+
+---
+
+상호작용에 앞서 플레이어가 근처에 있다면 플레이어의 머리위에 상호작용 문구를 띄워야 한다.
+
+```
+public GameObject interactionUI; // UI 오브젝트 참조
+    private IInteractable nearestInteractable = null;
 
     void Start()
     {
-        player = GameObject.FindGameObjectWithTag("Player");
-        rideableController = GetComponent<RideableController>();
-        virtualCamera = FindObjectOfType<CinemachineVirtualCamera>();  
-        playerRigidbody = player.GetComponent<Rigidbody>();
+        if (interactionUI != null)
+            interactionUI.SetActive(false); // 초기에는 비활성화
     }
-```
 
-상호작용가능한 대상의 태그가 플레이어인 경우만 탑승가능
-
-```
-private void EnterRide()
+    void Update()
     {
-        isRiding = true;
-        player.transform.position = seatPosition.position; 
-        rideableController.SetRiding(true);
+        FindNearestInteractable();
 
-        // ✅ UI 비활성화
-        if (interactUI != null)
-            interactUI.SetActive(false);
-
-        // ✅ 플레이어 물리 효과 비활성화
-        playerRigidbody.isKinematic = true;
-        player.GetComponent<Collider>().enabled = false;
-
-        // ✅ 카메라 변경
-        virtualCamera.Follow = transform;
-        virtualCamera.LookAt = transform;
-    }
-
-    private void ExitRide()
-    {
-        isRiding = false;
-        player.transform.position = transform.position + Vector3.right * 2;  
-        rideableController.SetRiding(false);
-
-        // ✅ UI 다시 활성화
-        if (interactUI != null)
-            interactUI.SetActive(true);
-
-        // ✅ 플레이어 물리 효과 다시 활성화
-        playerRigidbody.isKinematic = false;
-        player.GetComponent<Collider>().enabled = true;
-
-        // ✅ 카메라 다시 플레이어로 변경
-        virtualCamera.Follow = player.transform;
-        virtualCamera.LookAt = player.transform;
+        if (nearestInteractable != null)
+        {
+            interactionUI.SetActive(true); // UI 표시
+            if (Input.GetKeyDown(KeyCode.F))
+            {
+                nearestInteractable.Interact();
+            }
+        }
+        else
+        {
+            interactionUI.SetActive(false); // UI 숨김
+        }
     }
 ```
 
-시네머신을 사용해서 탑승시 카메라의 대상을 변경해주었다.
+캔버스를 만들고 하위에 Text UI를 생성한다. 문구를 작성한뒤 플레이어가 상호작용이 가능한 경우 화면에 표시해야 되기에 원하는 위치를 선정한다.
 
-플레이어가 활성화가 되면 오브젝트가 플레이어랑 같이 움직이는 상황이 발생해서
 
-플레이어를 비활성화 하고 탈것 오브젝트에 상호작용 기능을 추가하는것으로
 
-타고내리는 기능을 추가하였다.
+#### 3. 충돌
+
+---
+
+플레이어가 근처에 도달했다면 상호작용이 가능해야 함으로 충돌 처리를 해야한다.
+
+그러나 상호작용이 가능한 것은 사물뿐만은 아니다.
+
+기즈모의 영역이 콜라이더에 닿으면 키입력을 통해 상호작용 가능하도록 한다.
+
+```
+void FindNearestInteractable()
+    {
+        nearestInteractable = null;//초기값null
+        Collider2D[] colliders = Physics2D.OverlapCircleAll(transform.position, interactionRange);//범위안의 콜라이더 충돌
+        
+        foreach (Collider2D collider in colliders)
+        {
+            IInteractable interactable = collider.GetComponent<IInteractable>();
+            if (interactable != null)
+            {
+                nearestInteractable = interactable;//상호작용 가능하면 활성화
+                return;
+            }
+        }
+    }
+   
+```
+
+#### 4. 상호작용
+
+---
+
+사물과의 상호작용이 되어야 함으로 예시로 문이라는 오브젝트에 스크립트를 부착하였다.
+
+```
+using UnityEngine;
+
+public class Door : MonoBehaviour, IInteractable
+{
+    private bool isOpen = false;
+
+    public void Interact()
+    {
+        isOpen = !isOpen;
+        Debug.Log(isOpen ? "문이 열렸습니다!" : "문이 닫혔습니다!");
+    }
+}
+```
+
+디버깅을 통해 해당 코드가 잘 작동하는지 출력해준다.
+
+상호작용을 도와주는 코드를 완성했으니 오브젝트에 할당해준다.
+
+
+
+#### 5. 결론
+
+---
+
+F 키를 누를 수 있는 대상이 근처에 있다면 UI를 활성화 하여 표시
+
+F 키를 누르면 해당 개채와 상호작용
+
+범위를 벗어나면 UI 숨김
