--- a/_posts/2025-03-04-Deligate.md
+++ b/_posts/2025-03-04-Deligate.md
@@ -31,7 +31,7 @@ categories: TIL
 ## 📌 **1. 기본적인 델리게이트 사용법**
 
 ```
-csharp복사편집using System;
+using System;
 
 public class Program
 {
@@ -72,7 +72,7 @@ Message: Hello, Delegate!
 - **여러 개의 메서드를 델리게이트에 등록하여 한 번에 실행 가능**
 
 ```
-csharp복사편집using System;
+using System;
 
 public class Program
 {
@@ -94,7 +94,7 @@ public class Program
 ### 🔹 **실행 결과**
 
 ```
-makefile복사편집Method1: Hello
+Method1: Hello
 Method2: Hello
 ```
 
@@ -105,7 +105,7 @@ Method2: Hello
 - **이름 없는 익명 함수를 델리게이트에 직접 할당 가능**
 
 ```
-csharp복사편집using System;
+using System;
 
 public class Program
 {
@@ -140,7 +140,7 @@ Anonymous: Hello
 - **람다식을 사용하여 코드 간결화 가능**
 
 ```
-csharp복사편집using System;
+using System;
 
 public class Program
 {
@@ -157,7 +157,7 @@ public class Program
 ### 🔹 **실행 결과**
 
 ```
-복사편집
+
 15
 ```
 
@@ -168,7 +168,7 @@ public class Program
 - **이벤트 시스템과 함께 사용하면 특정 조건에서 실행할 수 있음**
 
 ```
-csharp복사편집using System;
+using System;
 
 public class EventExample
 {
